--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,6 +23,6 @@ uuid = { version = "1.18.0", features = ["serde", "v4"] }
 validator = { version = "0.20.0", features = ["derive"] }
 rand = "0.9.2"
 chrono = {version = "0.4.41", features = ["serde"] }
-bigdecimal = {version = "0.4.8", features = ["serde"] }
+bigdecimal = {version = "0.4.8", features = ["serde", "serde_json"] }
 fake = "4.4.0"
 rust_decimal = "1.37.2"
