--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,13 @@
 		"@tanstack/table-core": "^8.21.3",
 		"bits-ui": "^2.8.6",
 		"clsx": "^2.1.1",
+		"mode-watcher": "^1.0.8",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^1.0.5",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.0.0",
