--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
 		"d3": "^7.9.0",
 		"d3-array": "^3.2.4",
 		"d3-scale": "^4.0.2",
+		"date-fns": "^4.1.0",
 		"layerchart": "2.0.0-next.27"
 	}
 }
