--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
 		"tailwindcss": "^4.0.0",
 		"tw-animate-css": "^1.3.8",
 		"typescript": "^5.0.0",
-		"vite": "^7.0.4"
+		"vite": "^7.0.4",
+		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
 		"apexcharts": "^5.3.5",
