--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -26,3 +26,5 @@ chrono = {version = "0.4.41", features = ["serde"] }
 bigdecimal = {version = "0.4.8", features = ["serde", "serde_json"] }
 fake = "4.4.0"
 rust_decimal = "1.37.2"
+jsonwebtoken = "9.3.0"
+argon2 = "0.5.3"
