Add JWT token files to env file and setup keys script

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,11 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=petall
+
+ACCESS_TOKEN_MAX_AGE=15 # 15 minutes
+REFRESH_TOKEN_MAX_AGE=10080 # 7 days
+
+ACCESS_TOKEN_PUBLIC_KEY=keys/access.key.pub
+ACCESS_TOKEN_PRIVATE_KEY=keys/access.key
+REFRESH_TOKEN_PUBLIC_KEY=keys/refresh.key.pub
+REFRESH_TOKEN_PRIVATE_KEY=keys/refresh.key
