--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.0.0",
 		"@tanstack/table-core": "^8.21.3",
+		"@types/d3-scale": "^4.0.9",
 		"bits-ui": "^2.11.0",
 		"clsx": "^2.1.1",
 		"mode-watcher": "^1.0.8",
@@ -39,6 +40,7 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
+		"@types/d3-shape": "^3.1.7",
 		"apexcharts": "^5.3.5",
 		"d3": "^7.9.0",
 		"d3-array": "^3.2.4",
