--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
+		"@tabler/icons-svelte": "^3.35.0",
 		"@types/d3-shape": "^3.1.7",
 		"apexcharts": "^5.3.5",
 		"d3": "^7.9.0",
