--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -30,3 +30,6 @@ argon2 = "0.5.3"
 axum-test = "18.1.0"
 tracing-test = "0.2.5"
 itertools = "0.14.0"
+oauth2 = "4.4"
+reqwest = { version = "0.12", features = ["json"] }
+url = "2.5"
