--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,7 @@ ACCESS_TOKEN_PUBLIC_KEY=keys/access.key.pub
 ACCESS_TOKEN_PRIVATE_KEY=keys/access.key
 REFRESH_TOKEN_PUBLIC_KEY=keys/refresh.key.pub
 REFRESH_TOKEN_PRIVATE_KEY=keys/refresh.key
+
+GOOGLE_CLIENT_ID=XXXXX
+GOOGLE_CLIENT_SECRET=XXXXX
+GOOGLE_REDIRECT_URL="http://localhost:8080/auth/callback"
