--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,9 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
+		"@dnd-kit-svelte/svelte": "^0.1.3",
+		"@dnd-kit/abstract": "^0.1.21",
+		"@dnd-kit/helpers": "^0.1.21",
 		"@tabler/icons-svelte": "^3.35.0",
 		"@types/d3-shape": "^3.1.7",
 		"apexcharts": "^5.3.5",
@@ -47,6 +50,7 @@
 		"d3-array": "^3.2.4",
 		"d3-scale": "^4.0.2",
 		"date-fns": "^4.1.0",
-		"layerchart": "2.0.0-next.27"
+		"layerchart": "2.0.0-next.27",
+		"vaul-svelte": "^0.3.2"
 	}
 }
