Seed when generating community

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,5 @@ REFRESH_TOKEN_PRIVATE_KEY=keys/refresh.key
 GOOGLE_CLIENT_ID=XXXXX
 GOOGLE_CLIENT_SECRET=XXXXX
 GOOGLE_REDIRECT_URL="http://localhost:8080/auth/callback"
+
+RUST_LOG=info
