fix issues; remove oauth tests

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,6 +16,6 @@ REFRESH_TOKEN_PRIVATE_KEY=keys/refresh.key
 
 GOOGLE_CLIENT_ID=XXXXX
 GOOGLE_CLIENT_SECRET=XXXXX
-GOOGLE_REDIRECT_URL="http://localhost:8080/auth/callback"
+GOOGLE_REDIRECT_URL=http://localhost:5173/callback
 
 RUST_LOG=info
