--- a/community-backend/Cargo.toml
+++ b/community-backend/Cargo.toml
@@ -4,26 +4,28 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.99"
+common = { path = "../common" }
+anyhow = { workspace = true }
+axum = { workspace = true }
+bigdecimal = { workspace = true }
+chrono = { workspace = true }
+clap = { workspace = true }
+dotenv = { workspace = true }
+tokio = { workspace = true }
+uuid = { workspace = true }
+url = { workspace = true }
+rand = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+sqlx = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 names = { version = "0.14.0", default-features = false }
-axum = { version = "0.8.4", features = ["macros"] }
 axum-extra = { version = "0.10.1", features = ["cookie"] }
-clap = { version = "4.5.45", features = ["derive", "env"] }
-dotenv = "0.15.0"
 postgres-types = "0.2.9"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.142"
-sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "uuid", "bigdecimal"] }
 thiserror = "2.0.14"
-tokio = { version = "1.47.1", features = ["full"] }
 tower-http = { version = "0.6.6", features = ["trace"] }
-tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
-uuid = { version = "1.18.0", features = ["serde", "v4"] }
 validator = { version = "0.20.0", features = ["derive"] }
-rand = "0.8"
-chrono = {version = "0.4.41", features = ["serde"] }
-bigdecimal = { version = "0.4.8", features = ["serde", "serde_json"] }
 fake = "4.4.0"
 rust_decimal = "1.37.2"
 argon2 = "0.5.3"
@@ -32,6 +34,5 @@ tracing-test = "0.2.5"
 itertools = "0.14.0"
 oauth2 = "4.4"
 reqwest = { version = "0.12", features = ["json"] }
-url = "2.5"
 num-bigint = { version = "0.4", features = ["rand"] }
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
